# ook-reader

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Project.swift  README.md  RESEARCH.md  TODO.md  init.md  rustfmt.toml  skills-lock.json
.agents/skills/: lbb
.agents/skills/dioxus-07/: SKILL.md
.claude/skills/: dioxus-07
.claude/skills/commit/: SKILL.md
.claude/skills/lbb/.claude-plugin/: plugin.json
.nvim/: config.json
Sources/: ContentView.swift  OokReaderApp.swift
Tests/: OokReaderTests.swift
assets/: main.css
assets/icons/: icon.icns
assets/reader/: link-bridge.js  page-count.js  page-listener.js  pagination.css
book/: README.md  pg1661-adventures-of-sherlock-holmes.epub
docs/: glossary.md  icon-generation-prompt.md  roadmap.md  vision-mvp-reader.md
docs/adr/: 0001-walking-skeleton-vertical-slices.md  0002-dogfood-driven-prioritization.md  0003-reader-controlled-theming-injected-layer.md  0004-local-store-rusqlite-with-libsql-sync-path.md  README.md
docs/guides/: neovim-rust-dioxus-project-setup.md
docs/milestones/01-foundation/: README.md
docs/milestones/01-foundation/01-dev-environment/: README.md  phase-0-rust-toolchain.md
docs/milestones/01-foundation/02-project-scaffold/: README.md  phase-2-dioxus-scaffold.md
docs/milestones/02-basic-reader/: README.md  review-2026-07-steps.md
docs/milestones/03-reader-enhancements/: README.md
docs/milestones/04-multiplatform/: README.md
src/: epub.rs  library.rs  main.rs  nav.rs
src/ui/: library.rs  reader.rs
src/web/: assets.rs
(+18 files in other folders)
