[package]
name = "ook-reader"
version = "0.1.0"
authors = ["Dima Portenko <troublesohard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = [] }
rbook = "0.7"
base64 = "0.22"
percent-encoding = "2.3.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
